created user service, almost created photo saving, created post controller, fixed routing

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
-1. разобраться с маршрутизацией
 2. в LoginUserCommand, VerificateUserCommand, GetAllTagsQuery разобраться с типом ответа: модель или ее дто?
+3. сделать посты
+4. сделать оценивание
+6. перенести создание фото в веб апи.
