created photo saver, realised getter for posts.

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@
 3. сделать посты
 4. сделать оценивание
 6. перенести создание фото в веб апи.
+7. check average on empty ienumerable
+8. login возвращает пользователя, в постах коллекции null.
+9. не возвращать хэш пользователя в юзер контроллере.
