realised getter for user posts

--- a/todo.txt
+++ b/todo.txt
@@ -3,5 +3,9 @@
 4. сделать оценивание
 6. перенести создание фото в веб апи.
 7. check average on empty ienumerable
-8. login возвращает пользователя, в постах коллекции null.
 9. не возвращать хэш пользователя в юзер контроллере.
+10. удаление / редактирование своих постов.
+12. редактирование информации о пользователе, что бы это не было
+13. реклама
+14. промокоды
+15. при возвращении пользователя попробовать вернуть UserLookupDto или что то в этом роде.
