--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,14 @@
 2. в LoginUserCommand, VerificateUserCommand, GetAllTagsQuery разобраться с типом ответа: модель или ее дто?
-3. сделать посты
 4. сделать оценивание
-6. перенести создание фото в веб апи.
-7. check average on empty ienumerable
 9. не возвращать хэш пользователя в юзер контроллере.
 10. удаление / редактирование своих постов.
 12. редактирование информации о пользователе, что бы это не было
 13. реклама
 14. промокоды
 15. при возвращении пользователя попробовать вернуть UserLookupDto или что то в этом роде.
+16. продумать удаление - пользователь при удалении поста должен сообщить всем другим пользователям чтоб они удалили из списка своих оцененных постов удаленный
++ сами оценки из таблицы должны удалиться.
+17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
+
+"token": "7be8b36b-a29a-4804-aafe-be8d38d885d1"
+id": "faf4d19e-3a4e-42f3-8e22-fc736668cc36",
