--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 2. в LoginUserCommand, VerificateUserCommand, GetAllTagsQuery разобраться с типом ответа: модель или ее дто?
 4. сделать оценивание
 9. не возвращать хэш пользователя в юзер контроллере.
-10. удаление / редактирование своих постов.
+10. редактирование своих постов.
 12. редактирование информации о пользователе, что бы это не было
 13. реклама
 14. промокоды
@@ -11,4 +11,4 @@
 17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
 
 "token": "7be8b36b-a29a-4804-aafe-be8d38d885d1"
-id": "faf4d19e-3a4e-42f3-8e22-fc736668cc36",
+id": "3d95ab03-be72-4609-9771-a244f98e6bf9",
