realised post updating, now post controller returns post lookup dto.

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,19 @@
 16. продумать удаление - пользователь при удалении поста должен сообщить всем другим пользователям чтоб они удалили из списка своих оцененных постов удаленный
 + сами оценки из таблицы должны удалиться.
 17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
+18. сделать что-то типа tokenizedcommand inheritance
+20. сделать какую-то проверку в пост сервисе что пришли существующие теги.
 
-"token": "7be8b36b-a29a-4804-aafe-be8d38d885d1"
-id": "3d95ab03-be72-4609-9771-a244f98e6bf9",
+"token": "4c1389b7-5d75-4da4-b774-94c178ea2641"
+id": "4f6540f1-4963-44c5-b2a7-c7673e58eae7",
+
+{
+    "name": "pretty",
+    "creatorId": "dd6c57c6-d9f9-4453-bb5c-e733d3841d23",
+    "id": "dbde82c6-ef91-446f-b0f4-3b5796b9e1e7"
+  },
+  {
+    "name": "warm",
+    "creatorId": "dd6c57c6-d9f9-4453-bb5c-e733d3841d23",
+    "id": "3845e252-c526-4745-b4ea-a9cee688b0bd"
+  }
