BIG BUGS FIX. 1) now api doesn't return tag with all posts where it was been placed. 2) api doesn't return user, changed to dto(keep hash in secret) 3) fixed project to problems in different handlers with .aftermap 4)fixed unknown tags on post creating 5)changed relathionship between tag and post to many-to-many(cause one-to-many was incorrect here)

--- a/todo.txt
+++ b/todo.txt
@@ -1,27 +1,44 @@
-2. в LoginUserCommand, VerificateUserCommand, GetAllTagsQuery разобраться с типом ответа: модель или ее дто?
 4. сделать оценивание
-9. не возвращать хэш пользователя в юзер контроллере.
-10. редактирование своих постов.
 12. редактирование информации о пользователе, что бы это не было
 13. реклама
 14. промокоды
-15. при возвращении пользователя попробовать вернуть UserLookupDto или что то в этом роде.
 16. продумать удаление - пользователь при удалении поста должен сообщить всем другим пользователям чтоб они удалили из списка своих оцененных постов удаленный
 + сами оценки из таблицы должны удалиться.
 17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
 18. сделать что-то типа tokenizedcommand inheritance
-20. сделать какую-то проверку в пост сервисе что пришли существующие теги.
+20. сделать какую-то проверку в пост сервисе что не пришло много одинаковых тегов.
+21. сменить все под новую модель тега!
+22. при создании тега чтоб у него список постов не был налл!
+23. в одном контексте не может быть двух тегов с одним айди. для этого изменяется энтри стейт, но тогда мы больше не будем 
+знать о тегах поста, че делать?
+24. подумать о том чтоб пользователь не хранил у себя созданные и оценные посты
 
-"token": "4c1389b7-5d75-4da4-b774-94c178ea2641"
-id": "4f6540f1-4963-44c5-b2a7-c7673e58eae7",
+token 69f0ef21-0c15-488f-802b-36e3219c6fcf
+
+"tags": [
+    {
+      "id": "23626533-82ed-4409-a14a-d957f0e935ff",
+      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
+      "name": "cheap"
+    },
+    {
+      "id": "5a9f0920-9666-4b4a-898d-bd8c51c60315",
+      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
+      "name": "warm"
+    }
+  ]
+
 
 {
-    "name": "pretty",
-    "creatorId": "dd6c57c6-d9f9-4453-bb5c-e733d3841d23",
-    "id": "dbde82c6-ef91-446f-b0f4-3b5796b9e1e7"
-  },
-  {
-    "name": "warm",
-    "creatorId": "dd6c57c6-d9f9-4453-bb5c-e733d3841d23",
-    "id": "3845e252-c526-4745-b4ea-a9cee688b0bd"
-  }
+  "token": "69f0ef21-0c15-488f-802b-36e3219c6fcf",
+  "title": "hat",
+  "description": "nice hat v1",
+  "sellerLink": "lnik",
+  "tags": [
+    {
+      "id": "23626533-82ed-4409-a14a-d957f0e935ff",
+      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
+      "name": "cheap"
+    }
+  ]
+}
