implemented possibility to rate post.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-4. сделать оценивание
 12. редактирование информации о пользователе, что бы это не было
 13. реклама
 14. промокоды
@@ -6,39 +5,23 @@
 + сами оценки из таблицы должны удалиться.
 17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
 18. сделать что-то типа tokenizedcommand inheritance
-20. сделать какую-то проверку в пост сервисе что не пришло много одинаковых тегов.
-21. сменить все под новую модель тега!
-22. при создании тега чтоб у него список постов не был налл!
-23. в одном контексте не может быть двух тегов с одним айди. для этого изменяется энтри стейт, но тогда мы больше не будем 
-знать о тегах поста, че делать?
+20. сделать какую-то проверку в пост сервисе что не пришло много одинаковых тегов. !!!
 24. подумать о том чтоб пользователь не хранил у себя созданные и оценные посты
+25. ловить исключение usernotfound in login command.
 
-token 69f0ef21-0c15-488f-802b-36e3219c6fcf
+mark token b3fde1f8-c32b-4c80-8eb5-a57e1cdc0dcd
+kunkka token f891c100-83a6-4298-a377-c9627c397d6c
+bot token 36e2eedf-a005-468b-b1ba-0945416d4e92
 
 "tags": [
     {
-      "id": "23626533-82ed-4409-a14a-d957f0e935ff",
-      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
-      "name": "cheap"
+      "id": "95d1e8bd-df95-4972-bc58-7c7982f89070",
+      "creatorId": "e3c22d85-cada-4d4f-8646-83262175dcf7",
+      "name": "warm"
     },
     {
-      "id": "5a9f0920-9666-4b4a-898d-bd8c51c60315",
-      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
-      "name": "warm"
+      "id": "8c472f09-199d-4591-ab60-d4bf23537ea2",
+      "creatorId": "e3c22d85-cada-4d4f-8646-83262175dcf7",
+      "name": "pretty"
     }
-  ]
-
-
-{
-  "token": "69f0ef21-0c15-488f-802b-36e3219c6fcf",
-  "title": "hat",
-  "description": "nice hat v1",
-  "sellerLink": "lnik",
-  "tags": [
-    {
-      "id": "23626533-82ed-4409-a14a-d957f0e935ff",
-      "creatorId": "c673e59c-b630-4ec7-b6ad-68241e1d0326",
-      "name": "cheap"
-    }
-  ]
-}
+  ] 
