--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,27 @@
 12. редактирование информации о пользователе, что бы это не было
 13. реклама
 14. промокоды
-17. много повторяющихся проверок пользователя на налл в хендлерах и сервисах.
-18. сделать что-то типа tokenizedcommand inheritance
 24. подумать о том чтоб пользователь не хранил у себя созданные и оценные посты
-25. ловить исключение usernotfound in login command.
 26. проверить что делает сервер если ввести неверные данные в пост логин.
 
 {
-  "id": "3ae891da-ec62-42e4-ba27-0bc9a5e4f85c",
-  "token": "4b6276aa-cdfc-41fb-8aa3-e91651b44406",
+  "id": "1f06177c-0fa8-4461-b138-c8691087a5bf",
+  "token": "0b092307-a0d5-4e60-bd7f-c68bfe94d307",
   "username": "mark",
   "email": "markwantsapi@gmail.com",
+  "createdPosts": {
+    "posts": []
+  },
+  "ratedPosts": {
+    "posts": []
+  }
+}
+
+{
+  "id": "56c5b815-6744-4d4d-b255-e50da54de0ba",
+  "token": "c6cadbdd-4000-4907-aac5-b72bbf6d01e0",
+  "username": "kunkka",
+  "email": "acconlyfordota@gmail.com",
   "createdPosts": {
     "posts": []
   },
@@ -24,3 +34,7 @@ root pwd: tbF7rgC42TNiBMb018
 
 commands: docker pull markwantsapi/searchclotheswebapi
 docker run --publish 80:80/tcp markwantsapi/searchclotheswebapi
+
+local
+mark e3474cb9-c827-4900-89de-3c01908c1254, post e4f4f520-b829-4693-b30b-32155c21aff5
+kunkka 263c1730-1127-4d4d-a156-67ff0c04dca2, psot a11d3b4a-61c1-438d-b71f-bc1d4e35ac07
